change index cover-image url

--- a/Styles/home_style.css
+++ b/Styles/home_style.css
@@ -134,7 +134,7 @@ font-size: 2rem;
    
 
     background:var(--opacity),
-    url("https://raw.githubusercontent.com/shahdelhlwaney/FlowerShop/main/Images/banners/wedding_day_banner.JPG");
+    url("https://shahdelhlwaney.github.io/FlowerShop/Images/banners/wedding_day_banner.JPG");
 
     /* url('./Images/banners/wedding_day_banner.JPG'); */
     background-size: cover;
